<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#E7EEFB"
		android:layout_weight="1"
		android:gravity="center">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="75dp"
			android:orientation="horizontal"
			android:background="#E7EEFB"
			android:gravity="center"
			android:padding="8dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:padding="8dp"
				android:gravity="center"
				android:textSize="25sp"
				android:text="@string/profile"
				android:textColor="#000000"
				android:textStyle="bold"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:background="@drawable/top_round_bg"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="8dp">

			<LinearLayout
				android:id="@+id/linearavt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="12dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<LinearLayout
					android:id="@+id/l2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:orientation="vertical">
					<TextView
						android:id="@+id/name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:paddingTop="8dp"
						android:paddingBottom="4dp"
						android:text="Loading..."
						android:textSize="21sp"
						android:textColor="#000000" />
					<TextView
						android:id="@+id/email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:paddingTop="4dp"
						android:paddingBottom="4dp"
						android:text="Loading..."
						android:textSize="16sp"
						android:textColor="#333333" />
					<TextView
						android:id="@+id/phone"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:paddingTop="4dp"
						android:paddingBottom="4dp"
						android:text="Loading..."
						android:textSize="16sp"
						android:textColor="#333333" />
					<TextView
						android:id="@+id/uid"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="8dp"
						android:paddingRight="8dp"
						android:paddingTop="4dp"
						android:paddingBottom="4dp"
						android:text="Loading..."
						android:textSize="16sp"
						android:textColor="#333333" />
				</LinearLayout>
			</LinearLayout>
			<ScrollView
				android:id="@+id/vscroll1"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<LinearLayout
					android:id="@+id/l1"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/address"
						android:textSize="20sp"
						android:textStyle="bold"
						android:textColor="#0026c0" />

					<LinearLayout
						android:id="@+id/address"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:background="#E7EEFB"
						android:gravity="center_vertical"
						android:orientation="vertical">
						<TextView
							android:id="@+id/city"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="8dp"
							android:text="City: Loading..."
							android:textSize="18sp"
							android:textColor="#000000" />
						<TextView
							android:id="@+id/district"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="8dp"
							android:text="District: Loading..."
							android:textSize="18sp"
							android:textColor="#000000" />
						<TextView
							android:id="@+id/state"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="8dp"
							android:text="State: Loading..."
							android:textSize="18sp"
							android:textColor="#000000" />
					</LinearLayout>


					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="#000000"
						android:layout_marginTop="12dp"
						android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp">
					</LinearLayout>
					<LinearLayout
						android:id="@+id/language"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="2dp"
						android:padding="8dp"
						android:orientation="horizontal">
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/language"
							android:textSize="20sp"
							android:textStyle="bold"
							android:textColor="#000000" />
						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="right|center_vertical"
							android:paddingTop="8dp"
							android:paddingBottom="8dp"
							android:paddingLeft="8dp">
							<ImageView
								android:layout_width="50dp"
								android:layout_height="50dp"
								android:src="@drawable/ic_baseline_navigate_next_24"
								android:padding="8dp"/>
						</LinearLayout>
					</LinearLayout>
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="#000000"
						android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp">
					</LinearLayout>
					<LinearLayout
						android:id="@+id/linearp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="2dp"
						android:padding="8dp"
						android:orientation="horizontal">
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/password"
							android:textSize="20sp"
							android:textStyle="bold"
							android:textColor="#000000" />
						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="right|center_vertical"
							android:paddingTop="8dp"
							android:paddingBottom="8dp"
							android:paddingLeft="8dp">
							<ImageView
								android:layout_width="50dp"
								android:layout_height="50dp"
								android:src="@drawable/ic_baseline_navigate_next_24"
								android:padding="8dp"/>
						</LinearLayout>
					</LinearLayout>
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="#000000"
						android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp">
					</LinearLayout>

					<ProgressBar
						android:id="@+id/progressbar1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:indeterminate="false"
						style="?android:progressBarStyle" />

					<LinearLayout
						android:id="@+id/linear11"
						android:layout_width="300dp"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:layout_gravity="center_horizontal"
						android:orientation="horizontal">
						<Button
							android:id="@+id/logout"
							android:layout_width="250dp"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:layout_marginTop="4dp"
							android:background="#1944f1"
							android:text="@string/logout"
							android:textSize="20sp"
							android:textStyle="bold"
							android:textColor="#FFFFFF"
							android:layout_weight="1" />
					</LinearLayout>
				</LinearLayout>
			</ScrollView>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear4"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="#1944f1"
		android:padding="4dp"
		android:orientation="horizontal">
		<LinearLayout
			android:id="@+id/linearx"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:padding="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="25dp"
				android:layout_height="wrap_content"
				android:src="@drawable/homeb"
				android:padding="4dp"
				android:layout_weight="1"
				android:scaleType="fitCenter" />
			<TextView
				android:id="@+id/textviewh"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/home"
				android:textSize="8sp"
				android:textColor="#000000" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linears"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:padding="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<ImageView
				android:id="@+id/imageview4"
				android:layout_width="25dp"
				android:layout_height="wrap_content"
				android:src="@drawable/map"
				android:padding="4dp"
				android:layout_weight="1"
				android:scaleType="fitCenter" />
			<TextView
				android:id="@+id/textviewsafe"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map"
				android:textSize="8sp"
				android:textColor="#000000" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear7"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:padding="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<ImageView
				android:id="@+id/imageview2"
				android:layout_width="25dp"
				android:layout_height="wrap_content"
				android:src="@drawable/info"
				android:layout_weight="1"
				android:scaleType="fitCenter" />
			<TextView
				android:id="@+id/textviewn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/guidelines"
				android:textSize="8sp"
				android:textColor="#000000" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear8"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:padding="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical"
			android:background="@drawable/round_nav"
			android:layout_weight="1">
			<ImageView
				android:id="@+id/imageview3"
				android:layout_width="25dp"
				android:layout_height="wrap_content"
				android:src="@drawable/profilew"
				android:layout_weight="1"
				android:scaleType="fitCenter" />
			<TextView
				android:id="@+id/textviewa"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile"
				android:textSize="8sp"
				android:textColor="#FFFFFF" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>